--- a/package.json
+++ b/package.json
@@ -16,36 +16,37 @@
   "author": "Sean Price <seanprice@sevenhillstechnology.com>",
   "license": "MPL-2.0",
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.12.0",
-    "react": "^16.9.0",
-    "react-bootstrap": "^1.0.0"
+    "@fortawesome/fontawesome-free": "^6.2.0",
+    "react-bootstrap": "^2.6.0"
   },
   "peerDependencies": {
-    "react-redux": "^7.1.1"
+    "react": "^18.2.0",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
-    "@types/react": "^16.9.2",
-    "@types/react-dom": "^16.9.0",
-    "@types/react-redux": "^7.1.5",
-    "@types/react-syntax-highlighter": "^11.0.0",
-    "css-loader": "^0.28.10",
-    "file-loader": "^5.0.2",
-    "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.7.2",
-    "react-dom": "^16.9.0",
-    "react-redux": "^7.1.3",
-    "react-syntax-highlighter": "^11.0.2",
-    "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.20.2",
-    "ts-loader": "^6.1.0",
-    "typescript": "^3.7.3",
-    "url-loader": "^3.0.0",
-    "webpack": "^4.40.2",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.1",
-    "webpack-node-externals": "^1.7.2"
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.8",
+    "@types/react-redux": "^7.1.24",
+    "@types/react-syntax-highlighter": "^15.5.5",
+    "css-loader": "^5.2.7",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^4.5.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "react-syntax-highlighter": "^15.5.0",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.2",
+    "sass": "^1.56.0",
+    "sass-loader": "^7.3.1",
+    "style-loader": "^0.23.1",
+    "ts-loader": "^8.4.0",
+    "typescript": "^4.8.4",
+    "url-loader": "^4.1.1",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1",
+    "webpack-node-externals": "^3.0.0"
   },
   "files": [
     "dist/**/*"
